coll/xhc: Bring in latest developments
Multiple changes, new features, and enchancements

Notable new features:

- Inlining data in control path for extra small messages.
- Allreduce goes through Bcast's implementation intead of duplicating it.
- Fine grained op-wise tuning for hierarchy, chunk size, cico threshold.
- Reduce reworked & improved, with double buffering and other optimizations.
- When smsc support is not present, handle only small messages (below
	cico threshold), instead of not at all.

Signed-off-by: George Katevenis <gkatev@ics.forth.gr>

--- a/ompi/mca/coll/xhc/Makefile.am
+++ b/ompi/mca/coll/xhc/Makefile.am
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2021-2023 Computer Architecture and VLSI Systems (CARV)
+# Copyright (c) 2021-2024 Computer Architecture and VLSI Systems (CARV)
 #                         Laboratory, ICS Forth. All rights reserved.
 # $COPYRIGHT$
 #
@@ -12,8 +12,10 @@ dist_opaldata_DATA = help-coll-xhc.txt
 
 sources = \
     coll_xhc.h \
-    coll_xhc_atomic.h \
+    coll_xhc_intrinsic.h \
     coll_xhc.c \
+    coll_xhc_comm.c \
+    coll_xhc_hierarchy.c \
     coll_xhc_component.c \
     coll_xhc_module.c \
     coll_xhc_bcast.c \
